# rwkv-rs

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK_SOP.md  Cargo.toml  benchmark_downloads.rs  codecov.yml  deny.toml  rustfmt.toml  rwkv7-g1d-0.4b-20260210-ctx8192.pth:Zone.Identifier  watch.txt
crates/rwkv/: Cargo.toml  README.md
crates/rwkv-bench/: Cargo.toml
crates/rwkv-bench/src/: error.rs  lib.rs  metrics.rs  profile.rs  report.rs  serving.rs  trace.rs
crates/rwkv-config/: Cargo.toml
crates/rwkv-config/src/: lib.rs
crates/rwkv-config/src/raw/: eval.rs  infer.rs  mod.rs  model.rs  train.rs
crates/rwkv-config/src/validated/: eval.rs  infer.rs  mod.rs  model.rs  train.rs
crates/rwkv-data/: Cargo.toml
crates/rwkv-data/src/: lib.rs
crates/rwkv-data/src/mmap/: bin.rs  bin_old.rs  dtype.rs  idx.rs  map.rs  mod.rs  sample.rs
crates/rwkv-data/src/processor/: mod.rs
crates/rwkv-data/src/tokenizer/: mod.rs  trie.rs
crates/rwkv-derive/: Cargo.toml
crates/rwkv-derive/src/: lib.rs
crates/rwkv-eval/: AGENT_BENCHMARK_DESIGN.md  Cargo.toml
crates/rwkv-eval/src/: error.rs  init.rs  lib.rs  runner.rs  runtime.rs
crates/rwkv-eval/src/checkers/: mod.rs
crates/rwkv-eval/src/cores/: mod.rs  sandbox_queue.rs
crates/rwkv-eval/src/datasets/: hf_downloader.rs  hf_viewer.rs  mod.rs  parquet_utils.rs
crates/rwkv-eval/src/db/: mod.rs
crates/rwkv-eval/src/dtos/: mod.rs
crates/rwkv-eval/src/evaluators/: coding.rs  instruction_following.rs  knowledge.rs  mod.rs
crates/rwkv-eval/src/handlers/: auth.rs  mod.rs
crates/rwkv-eval/src/inferers/: mod.rs
crates/rwkv-eval/src/routes/: mod.rs
crates/rwkv-eval/src/sdk/: mod.rs
crates/rwkv-eval/src/services/: admin.rs  completions.rs  meta.rs  mod.rs  review_queue.rs  runtime.rs  tasks.rs
crates/rwkv-eval/tests/: benchmark_datasets.rs  benchmark_downloads.rs
crates/rwkv-export/: Cargo.toml
crates/rwkv-export/src/: lib.rs
crates/rwkv-infer/: Cargo.toml  TOKEN_ZERO_EARLY_STOP.md
crates/rwkv-infer-old/: Cargo.toml
crates/rwkv-infer-old/src/: lib.rs
crates/rwkv-infer-old/src/access/: mod.rs
crates/rwkv-infer-old/src/auth/: mod.rs
crates/rwkv-infer-old/src/config_loader/: mod.rs
crates/rwkv-infer-old/src/inference_core/: batch_scheduler.rs  byte_decoder.rs  constraint.rs  execution_loop.rs  logprobs.rs  mod.rs  request_state.rs  request_submit.rs  sampling.rs  tokenizer_loop.rs
crates/rwkv-infer-old/src/model_pool/: build_groups.rs  loaded_model_registry.rs  mod.rs  request_router.rs
crates/rwkv-infer/examples/: rwkv-infer-server.rs
crates/rwkv-infer/src/: error.rs  lib.rs  sonic_json.rs  trace.rs
crates/rwkv-lm/: Cargo.toml
crates/rwkv-lm/src/: auto_regressive_model.rs  lib.rs  sequence_embedding_model.rs  state_adapter_model.rs
crates/rwkv-lm/tests/: auto_regressive_model.rs  test_tools.rs
crates/rwkv-nn/: Cargo.toml
crates/rwkv-nn/src/: lib.rs  state_adapter_model.rs
crates/rwkv-trace/: Cargo.toml
crates/rwkv-trace/src/: lib.rs
crates/rwkv-train/: Cargo.toml
crates/rwkv-train-cli/: Cargo.toml
crates/rwkv-train-cli/src/: lib.rs
crates/rwkv-train/src/: lib.rs  trace.rs
crates/rwkv/src/: lib.rs
examples/paired-dna-mmap-dataset-converter/: Cargo.toml
examples/paired-dna-mmap-dataset-converter/examples/: paired-dna-mmap-dataset-converter.rs
examples/rwkv-distill-data/: Cargo.toml  README.md
examples/rwkv-distill-data/config/: example.toml
examples/rwkv-distill-data/examples/: rwkv-distill-data.rs
examples/rwkv-distill-data/src/: config.rs  lib.rs  paths.rs  pipeline.rs
examples/rwkv-dna-trainer/: Cargo.toml
examples/rwkv-dna-trainer/config/: model.toml  train.toml
examples/rwkv-dna-trainer/examples/: rwkv-dna-trainer.rs
examples/rwkv-g1-0point1b-pth2mpk-converter/: Cargo.toml
examples/rwkv-g1-0point1b-pth2mpk-converter/examples/: rwkv-g1-0point1b-pth2mpk-converter.rs
examples/rwkv-lm/: Cargo.toml  README.md
examples/rwkv-lm-eval/: .env.example  Cargo.toml  README.md
examples/rwkv-lm-eval/config/: alicloud.toml  all_benchmarks_except_knowledge_g1e_1_5b_2_9b_018.toml  all_benchmarks_except_knowledge_g1e_1_5b_2_9b_018_cap_math_20260327.toml  all_benchmarks_rwkv7_g1d_13_3b_jump.toml  all_benchmarks_rwkv7_g1e_7_2b_local_vllm_resume.toml  all_coding_function_gpu3.toml  all_coding_gpu3.toml  all_instruction_gpu3.toml  all_math_knowledge_gpu2.toml  arena_hard_v2.toml  browsecomp.toml  example.toml  include.toml  knowledge_all_g1e_1_5b_2_9b_018.toml  knowledge_rwkv7_g1d_1_5b_2_9b_154.toml  mcp_bench.toml  mcp_bench_7p2b_g1d_smoke.toml  polymath.toml  polymath_arena_hard_v2_wmt24pp.toml  polymath_arena_hard_v2_wmt24pp_smoke.toml  tau_bench_13_3b.toml  wmt24pp.toml
examples/rwkv-lm-eval/docs/: inference_protocol.md
examples/rwkv-lm-eval/examples/: migrate_scores.rs  rwkv-lm-eval-single-sample-smoke.rs  rwkv-lm-eval-test.rs  rwkv-lm-eval.rs
examples/rwkv-lm-eval/scripts/: check_env.sh  init_db.sql  open_157_judge_tunnels.sh  run_native_coding_bench.sh  unit_test.sh
examples/rwkv-lm-eval/src/: checker.rs  config_path.rs  evaluating.rs  init.rs  lib.rs  paths.rs
examples/rwkv-lm-trainer/: Cargo.toml  README.md  cubecl.toml
examples/rwkv-lm-trainer/config/: train.toml
examples/rwkv-lm-trainer/examples/: rwkv-lm-trainer-old.rs  rwkv-lm-trainer.rs
examples/rwkv-lm-trainer/src/: lib.rs  model.rs  training.rs
examples/rwkv-lm/benches/: inferring.rs  profile_nsys_bench.rs  profile_tracy_bench.rs  report_bench.rs  rwkv-lm-infer-bench.rs  serve_bench.rs  sweep_bench.rs  train_command_bench.rs
examples/rwkv-lm/config/: infer.toml  model.toml  train.toml
examples/rwkv-lm/examples/: rwkv-lm-infer.rs  rwkv-lm-pth2bpk.rs  rwkv-lm-pth2mpk.rs  rwkv-lm-train.rs  rwkv-lm-trainer-old.rs  rwkv-lm-trainer.rs
examples/rwkv-lm/src/: inferring.rs  lib.rs  model.rs  paths.rs  pth2bpk.rs  pth2mpk.rs  training.rs
examples/rwkv-lm/tests/: sdk_single_prompt.rs
examples/rwkv-lm/weights/: rwkv7-g1e-7.2b-20260301-ctx8192.mpk:Zone.Identifier
examples/text-data-clean-pipeline/: Cargo.toml
examples/text-data-clean-pipeline/examples/: text-data-clean-pipeline.rs
(+1035 files in other folders)
