[workspace]
resolver = "2"
members = [
    "./crates/*",
    "./examples/*"
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace.lints.clippy]

[workspace.dependencies]
# === Core Infrastructure ===
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
rayon = { version = "1.11.0" }
futures = { version = "0.3.31" }
async-trait = { version = "0.1.89" }

# === Data Structures ===
once_cell = { version = "1.21.3" }
dashmap = { version = "7.0.0-rc2" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# === File & Serialization ===
bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
bio = { version = "3.0.0" }
csv = { version = "1.4.0" }
memmap2 = "0.9.9"
memfd = { version = "0.6.5" }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sonic-rs = { version = "0.5.6" }
hashbrown = { version = "0.16.1" }
csv-async = { version = "1.3.1", features = ["tokio"] }
parquet = { version = "57.1.0", features = ["async"] }
toml = { version = "0.9.10+spec-1.1.0" }
tempfile = { version = "3.24.0" }
divan = { version = "0.1.21" }

safetensors = { version = "0.7.0" }
gguf-rs-lib = { version = "0.2.5" }

# === Database ===
redis = { version = "1.0.2", features = ["default", "r2d2", "ahash", "tokio-comp"] }
redb = { version = "3.1.0" }

# === Utilities ===
dialoguer = { version = "0.12.0" }
primes = { version = "0.4.0" }
regex = { version = "1.12.2" }
unescape = { version = "0.1.0" }
zstd = { version = "0.13.3" }
itertools = { version = "0.14.0" }
walkdir = { version = "2.5.0" }
derive-new = { version = "0.7.0" }

unicode-segmentation = "1.12.0"
unicode-script = "0.5.8"
unicode-normalization = "0.1.25"

proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.113", features = ["full"] }

# === CLI & Monitoring ===
clap = { version = "4.5.54", features = ["derive"] }
log = "0.4.29"
chrono = { version = "0.4.42", features = ["clock"] }
clia-tracing-config = "0.2.7"
indicatif = { version = "0.18.3", features = ["tokio"] }
wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "5d9ab26376a5ac70f779a0fa78e137d3779a1ba2" }

# === Deep Learning Core ===
burn = { version = "0.20.0-pre.6", features = [
    "train", "autodiff", "ndarray", "cuda", "wgpu", "cubecl", "collective",
] }
burn-train = { version = "0.20.0-pre.6" }
burn-fusion = { version = "0.20.0-pre.6" }
burn-cubecl = { version = "0.20.0-pre.6" }
burn-ir = { version = "0.20.0-pre.6" }
burn-store = { version = "0.20.0-pre.6" }
burn-optim = { version = "0.20.0-pre.6" }

ndarray = { version = "0.17.1" }
ndarray-npy = { version = "0.10.0" }

hotpath = { version = "0.9.2" }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
