[workspace]
resolver = "2"
members = [
    "./crates/*",
    "./examples/*"
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace.lints.clippy]

[workspace.dependencies]
# === Core Infrastructure ===
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
rayon = { version = "1.11.0" }
futures = { version = "0.3.32" }
async-trait = { version = "0.1.89" }
axum = { version = "0.8.8", features = ["macros", "tokio"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower = { version = "0.5.3" }
iceoryx2 = { version = "0.8.1", features = ["libc_platform"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "query", "stream"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
bytes = { version = "1.11.1" }
linkme = { version = "0.3.35" }

# === Data Structures ===
once_cell = { version = "1.21.3" }
dashmap = { version = "7.0.0-rc2" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# === File & Serialization ===
bytemuck = { version = "1.25.0", features = ["derive", "extern_crate_alloc"] }
bio = { version = "3.0.0" }
csv = { version = "1.4.0" }
memmap2 = "0.9.10"
memfd = { version = "0.6.5" }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sonic-rs = { version = "0.5.7" }
hashbrown = { version = "0.16.1" }
csv-async = { version = "1.3.1", features = ["tokio"] }
parquet = { version = "58.0.0", features = ["async"] }
toml = { version = "1.0.6+spec-1.1.0" }
tempfile = { version = "3.26.0" }
divan = { version = "0.1.21" }

safetensors = { version = "0.7.0" }
gguf-rs-lib = { version = "0.2.5" }

# === Database ===
redis = { version = "1.0.5", features = ["default", "r2d2", "ahash", "tokio-comp"] }
redb = { version = "3.1.1" }

# === Utilities ===
dialoguer = { version = "0.12.0" }
primes = { version = "0.4.0" }
regex = { version = "1.12.3" }
langdetect-rs = "0.2.3"
unescape = { version = "0.1.0" }
zstd = { version = "0.13.3" }
itertools = { version = "0.14.0" }
walkdir = { version = "2.5.0" }
derive-new = { version = "0.7.0" }
flate2 = { version = "1.1.9" }
microsandbox = { version = "0.1.2" }

unicode-segmentation = "1.12.0"
unicode-script = "0.5.8"
unicode-normalization = "0.1.25"

proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

# === CLI & Monitoring ===
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-tracy = { version = "0.11.4" }
tracy-client = "0.18.4"
chrono = { version = "0.4.44", features = ["clock"] }
clia-tracing-config = "0.2.7"
indicatif = { version = "0.18.4", features = ["tokio"] }
thiserror = "2.0.18"
nvtx = "1.3.0"
wandb = { git = "https://github.com/rwkv-rs/wandb-rs", rev = "1633ca27afb4e09caca2e00d148ea239bc639a69" }
plotters = { version = "0.3.7", default-features = false }

# === Deep Learning Core ===
burn = { version = "0.20.1", default-features = false }
burn-train = { version = "0.20.1", default-features = false }
burn-fusion = { version = "0.20.1", default-features = false }
burn-cubecl = { version = "0.20.1", default-features = false }
burn-ir = { version = "0.20.1", default-features = false }
burn-store = { version = "0.20.1", default-features = false }
burn-optim = { version = "0.20.1", default-features = false }
burn-ndarray = { version = "0.20.1", default-features = false }

ndarray = { version = "0.17.2" }
ndarray-npy = { version = "0.10.0" }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
