[package]
name = "rwkv-bench"
version = "0.1.0"
edition = "2024"
description = "RWKV benchmarking, profiling orchestration, and static reporting toolkit"
license = "Apache-2.0"

[lib]
bench = false

[features]
default = []
trace-lite = ["dep:rwkv-trace", "rwkv-trace/tracy"]
trace-full = ["trace-lite"]
bench-serve = []
bench-report = []

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

plotters = { version = "0.3.7", default-features = false, features = ["line_series", "point_series", "svg_backend"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1.0.145"

rwkv-trace = { path = "../rwkv-trace", optional = true }
