[package]
name = "rwkv-bench"
version = "0.1.0"
edition = "2024"
description = "RWKV benchmarking, profiling orchestration, and static reporting toolkit"
license = "Apache-2.0"

[lib]
bench = false

[features]
default = []
trace = [
    "dep:tracy-client",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-tracy",
]
bench-serve = []
bench-report = []

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

plotters = { workspace = true, default-features = false, features = ["line_series", "point_series", "svg_backend"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = { workspace = true }
