[package]
name = "rwkv-bench"
version = "0.1.0"
edition = "2024"
description = "RWKV benchmarking and profiling toolkit"
license = "Apache-2.0"

[lib]
bench = false

[features]
default = []
trace = [
    "dep:tracy-client",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-tracy",
]
bench-serve = []

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

reqwest = { workspace = true, default-features = false, features = ["json", "rustls", "stream"] }
sonic-rs = { workspace = true }
