[package]
name = "rwkv-data"
version = "0.1.0"
edition = "2024"
description = "Memory-mapped dataset readers, tokenizers, and samplers for RWKV training pipelines"
license = "Apache-2.0"

[dependencies]
# === Async Runtime ===
tokio = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }

# === Data Structures ===
once_cell = { workspace = true }
dashmap = { workspace = true }
xxhash-rust = { workspace = true }

# === File Processing ===
bytemuck = { workspace = true }
memmap2 = { workspace = true }

# === Serialization ===
serde = { workspace = true }
sonic-rs = { workspace = true }
csv-async = { workspace = true }
parquet = { workspace = true }

# === Database ===
redb = { workspace = true }

# === Utilities ===
primes = { workspace = true }
regex = { workspace = true }
unescape = { workspace = true }
indicatif = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-script = { workspace = true }
unicode-normalization = { workspace = true }
zstd = { workspace = true }
log = { workspace = true }

burn = { workspace = true, default-features = false, features = ["std"] }

# === Local Dependencies ===
rwkv-derive = { path = "../rwkv-derive" }
rwkv-config = { path = "../rwkv-config" }

[dev-dependencies]
tempfile = { workspace = true }
