[package]
name = "rwkv-derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macros (LineRef, ConfigBuilder) for rwkv-rs configuration and mmap models"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
