[package]
name = "rwkv-eval"
version = "0.1.0"
edition = "2024"
description = "Evaluation harness placeholder for running benchmark suites against RWKV models"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rwkv-config = { path = "../rwkv-config" }
async-openai = { version = "0.33.0", default-features = false, features = ["rustls", "completions", "chat-completion", "byot"] }
linkme = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
langdetect-rs = { workspace = true }
flate2 = { workspace = true }
microsandbox = { workspace = true }
