[package]
name = "rwkv-export"
version = "0.1.0"
edition = "2024"
description = "Utilities for exporting RWKV checkpoints between PyTorch .pth and Burn MPK formats"
license = "Apache-2.0"

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true }

rwkv-data = { path = "../../crates/rwkv-data" }
rwkv-lm = { path = "../../crates/rwkv-lm" }
