[package]
name = "rwkv-export"
version = "0.1.0"
edition = "2024"
description = "Utilities for exporting RWKV checkpoints between PyTorch .pth and Burn MPK formats"
license = "Apache-2.0"

[dependencies]
burn = { workspace = true, default-features = false, features = ["std"] }
burn-store = { workspace = true, default-features = false, features = ["std", "pytorch"] }

rwkv-data = { path = "../../crates/rwkv-data" }
rwkv-nn = { path = "../../crates/rwkv-nn" }
