[package]
name = "rwkv-infer-old"
version = "0.1.0"
edition = "2024"
description = "Work-in-progress inference runtime hooking RWKV language models to Tokio backends"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sonic-rs = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
xgrammar = { package = "xgrammar-rs", version = "0.1.31" }

# HTTP server (OpenAI-compatible)
axum = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# Inference utilities
once_cell = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

# Optional tokenizer for text endpoints (RWKV vocab)
rwkv-data = { path = "../rwkv-data" }
rwkv-config = { path = "../rwkv-config" }
rwkv-bench = { path = "../rwkv-bench", default-features = false }
clia-tracing-config = { workspace = true }
iceoryx2 = { workspace = true, optional = true }
itertools = { workspace = true }

burn = { workspace = true, default-features = false, features = ["std", "autodiff", "cubecl"] }

[features]
default = ["http"]
http = []
ipc = ["dep:iceoryx2"]
trace = ["dep:tracing", "rwkv-bench/trace"]

