[package]
name = "rwkv-nn"
version = "0.1.0"
edition = "2024"
description = "Core RWKV language model layers, custom WKV kernels, and Burn module implementations"
license = "Apache-2.0"

[features]
default = ["fusion"]
fusion = []
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["dep:hotpath", "hotpath/hotpath-alloc"]
hotpath-alloc-count-total = ["dep:hotpath", "hotpath/hotpath-alloc"]
hotpath-off = ["dep:hotpath", "hotpath/hotpath-off"]

[dependencies]
# === Deep Learning Core ===
burn = { workspace = true, default-features = false, features = ["std", "autodiff", "cubecl", "wgpu"] }
burn-fusion = { workspace = true, default-features = false, features = ["std"] }
burn-cubecl = { workspace = true, default-features = false, features = ["std"] }
burn-ir = { workspace = true, default-features = false, features = ["std"] }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }

serde = { workspace = true }

itertools = { workspace = true }

# === Local Dependencies ===
rwkv-config = {path = "../rwkv-config"}
rwkv-data = { path = "../rwkv-data" }
hotpath = { workspace = true, optional = true }
